[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
glfw = { workspace = true }
image = { workspace = true }
log = { workspace = true }
smol = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
wgpu_text = { workspace = true }
raw-window-handle = { workspace = true }
rustc-hash = { workspace = true }